src/objects/IntegrationLog__c.object
<CustomObject>
    <description>Object for storing integration logs</description>
    <fields>
        <fullName>CommunicationTime__c</fullName>
        <description>Time of the communication between services</description>
        <label>Communication Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ErrorOccurred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating whether an error has occurred in the communication.</description>
        <label>Error Occurred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestMessage__c</fullName>
        <description>Request message</description>
        <label>Request Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseMessage__c</fullName>
        <description>Response message</description>
        <label>Response Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CommunicationTime__c</columns>
        <columns>ErrorOccurred__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Integration Logs</label>
    </listViews>
    <nameField>
        <displayFormat>IntegrationLog-{0000}</displayFormat>
        <label>Integration Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>